<resources>
    <string name="app_name">Sangarodhak</string>


    <!--String Constants-->

    <!--Fragment Home-->
    <string name="home_name_state">State</string>
    <string name="home_name_country">Country</string>
    <string name="home_total_cases">Total Cases</string>
    <string name="home_active_cases">Active Cases</string>
    <string name="home_total_recovered">Recovered</string>
    <string name="home_total_deaths">Death</string>

    <!--Saved Data in Shared Preferences-->
    <string name="pref_case_data">team.hashbash.sangarodhak.case_data</string>
    <string name="pref_user_data">team.hashbash.sangarodhak.user_data</string>
    <string name="pref_trivia_data">team.hashbash.sangrodhak.trivia_data</string>

    <!--District Data in Shared Preferences-->
    <string name="pref_case_data_district_name">PREF_DISTRICT_NAME</string>
    <string name="pref_case_data_district_confirmed">PREF_DISTRICT_CONFIRMED</string>

    <!--State Data in Shared Preferences-->
    <string name="pref_case_data_state_name">PREF_STATE_NAME</string>
    <string name="pref_case_data_state_total_cases">PREF_STATE_TOTAL_CASES</string>
    <string name="pref_case_data_state_recovered">PREF_STATE_RECOVERED</string>
    <string name="pref_case_data_state_dead">PREF_STATE_DEAD</string>
    <string name="pref_case_data_state_active">PREF_STATE_ACTIVE</string>

    <!--Country Data in Shared Preferences-->
    <string name="pref_case_data_country_name">PREF_COUNTRY_NAME</string>
    <string name="pref_case_data_country_total_cases">PREF_COUNTRY_TOTAL_CASES</string>
    <string name="pref_case_data_country_recovered">PREF_COUNTRY_RECOVERED</string>
    <string name="pref_case_data_country_dead">PREF_COUNTRY_DEAD</string>
    <string name="pref_case_data_country_active">PREF_COUNTRY_ACTIVE</string>

    <!--Global Data in Shared Preferences-->
    <string name="pref_case_data_global_confirmed">PREF_GLOBAL_CONFIRMED</string>
    <string name="pref_case_data_global_recovered">PREF_GLOBAL_RECOVERED</string>
    <string name="pref_case_data_global_deaths">PREF_GLOBAL_DEATHS</string>

    <string name="url_world_stats">https://api.covid19api.com/summary</string>
    <string name="url_india_stats_mini">https://api.covid19api.com/live/country/india</string>
    <string name="url_india_all_states">https://api.rootnet.in/covid19-in/stats/latest</string>
    <string name="url_all_districts">https://api.covid19india.org/state_district_wise.json</string>

    <string name="pref_district_confirmed">PREF_DISTRICT_CONFIRMED</string>


    <!--PM Cares Fund Details-->
    <string name="pm_cares_account_name">PM CARES</string>
    <string name="pm_cares_account_number">2121PM20202</string>
    <string name="pm_cares_account_ifsc_code">SBIN0000691</string>
    <string name="pm_cares_account_upi">pmcares@sbi</string>

    <!--UPI App Package Names-->
    <string name="paytm_package_name">net.one97.paytm</string>
    <string name="google_pay_package_name">com.google.android.apps.nbu.paisa.user</string>
    <string name="phone_pe_package_name">com.phonepe.app.preprod</string>

    <!--Stats Data Stored-->
    <string name="pref_stats_data">team.hashbash.sangarodhak.stats_data</string>
    <string name="pref_stats_state_data">PREF_STATE_DATA</string>
    <string name="pref_stats_country_data">PREF_COUNTRY_DATA</string>
    <string name="pref_stats_global_data">PREF_GLOBAL_DATA</string>
    <string name="pref_stats_notice_data">PREF_NOTICE_DATA</string>

    <!--Supplies-->
    <string-array name="supplies_item_array">
        <item>Item1</item>
        <item>Item2</item>
        <item>Item3</item>
        <item>Item4</item>
    </string-array>

    <!--Trivia-->
    <string name="pref_trivia_previous_score">PREF_PREVIOUS_SCORE</string>
    <string name="pref_trivia_highest_score">PREF_HIGHEST_SCORE</string>
    <string-array name="trivia_questions_number_list">
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>5</item>
    </string-array>

    <string-array name="trivia_category_list">
        <item>Any Category</item>
        <item>General Knowledge</item>
        <item>Entertainment: Books</item>
        <item>Entertainment: Film</item>
        <item>Entertainment: Music</item>
        <item>Entertainment: Musicals &amp; Theatres</item>
        <item>Entertainment: Television</item>
        <item>Entertainment: Video Games</item>
        <item>Entertainment: Board Games</item>
        <item>Science &amp; Nature</item>
        <item>Science: Computers</item>
        <item>Science: Mathematics</item>
        <item>Mythology</item>
        <item>Sports</item>
        <item>Geography</item>
        <item>History</item>
        <item>Politics</item>
        <item>Art</item>
        <item>Celebrities</item>
        <item>Animals</item>
        <item>Vehicles</item>
        <item>Entertainment: Comics</item>
        <item>Science: Gadgets</item>
        <item>Entertainment: Japanese Anime &amp; Manga</item>
        <item>Entertainment: Cartoon &amp; Animations</item>
    </string-array>

    <string-array name="trivia_difficulty_list">
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
    </string-array>


    <!--Hard coded strings-->


</resources>
