<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent">

    <com.github.florent37.shapeofview.shapes.RoundRectView
        android:id="@+id/title_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:shape_roundRect_bottomLeftRadius="20dp"
        app:shape_roundRect_bottomRightRadius="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical"
            android:paddingBottom="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:fontFamily="@font/gilroylight"
                android:gravity="center"
                android:text="@string/app_name"
                android:textColor="@color/black"
                android:textSize="30sp" />

            <LinearLayout
                android:id="@+id/global_stats_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:paddingStart="20dp"
                android:paddingEnd="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:shadowColor="@color/grey_800"
                        android:shadowDx="1"
                        android:shadowDy="2"
                        android:text="Confirmed"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/global_confirmed"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="0"
                        android:textColor="@color/black"
                        android:textSize="21sp" />

                </LinearLayout>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="3dp"
                    android:layout_marginBottom="3dp"
                    android:background="@color/grey_500" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:shadowColor="@color/black"
                        android:text="Recovered"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/global_recovered"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="0"
                        android:textColor="@color/black"
                        android:textSize="21sp" />

                </LinearLayout>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="3dp"
                    android:layout_marginBottom="3dp"
                    android:background="@color/grey_500" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:shadowColor="@color/black"
                        android:text="Deaths"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/global_deaths"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="0"
                        android:textColor="@color/black"
                        android:textSize="21sp" />

                </LinearLayout>


            </LinearLayout>

        </LinearLayout>

    </com.github.florent37.shapeofview.shapes.RoundRectView>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_container">

        <LinearLayout
            android:id="@+id/state_stats_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="10dp">

            <TextView
                android:id="@+id/state_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:text="@string/home_name_state"
                android:textColor="@color/white"
                android:textSize="21sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:gravity="center|start"
                    android:text="@string/home_total_cases"

                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/state_total_cases"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:gravity="center|end"
                    android:maxLines="1"
                    android:text="0"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:gravity="center|start"
                    android:text="@string/home_active_cases"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/state_active"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:gravity="center|end"
                    android:text="0"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:gravity="center|start"
                    android:text="@string/home_total_recovered"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/state_recovered"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:gravity="center|end"
                    android:text="0"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:gravity="center|start"
                    android:text="@string/home_total_deaths"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/state_dead"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:gravity="center|end"
                    android:text="0"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
            </LinearLayout>


        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/black" />

        <LinearLayout
            android:id="@+id/country_stats_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="10dp">

            <TextView
                android:id="@+id/country_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:text="@string/home_name_country"
                android:textColor="@color/white"
                android:textSize="21sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:gravity="center|start"
                    android:text="@string/home_total_cases"

                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/country_total_cases"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:gravity="center|end"
                    android:maxLines="1"
                    android:text="0"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:gravity="center|start"
                    android:text="@string/home_active_cases"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/country_active"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:gravity="center|end"
                    android:text="0"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:gravity="center|start"
                    android:text="@string/home_total_recovered"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/country_recovered"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:gravity="center|end"
                    android:text="0"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:gravity="center|start"
                    android:text="@string/home_total_deaths"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/country_dead"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:gravity="center|end"
                    android:text="0"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>


    <com.github.florent37.shapeofview.shapes.RoundRectView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:shape_roundRect_topLeftRadius="20dp"
        app:shape_roundRect_topRightRadius="20dp">

        <ScrollView
            android:layout_width="match_parent"
            android:background="@color/grey_50"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/home_bottom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/grey_50"
                android:orientation="vertical">



            </LinearLayout>

        </ScrollView>

    </com.github.florent37.shapeofview.shapes.RoundRectView>

</androidx.constraintlayout.widget.ConstraintLayout>